--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -1,5 +1,4 @@
 .navigation {
-    /* background: #fff; */
     background: rgba(25, 34, 68);
     /* backdrop-filter: blur(10px); */
     position: fixed;
@@ -9,6 +8,7 @@
     height: auto;
     left: 0;
     bottom: 0px;
+
 }
 
 
@@ -32,7 +32,7 @@
 }
 
 .navigation a {
-    font-family: Gilroy;
+    font-family: Gilroy, sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 11px;
