--- a/src/components/subMenu/SubMenu.module.css
+++ b/src/components/subMenu/SubMenu.module.css
@@ -2,11 +2,15 @@
     padding-bottom: 83px;
 }
 
+.buttons {
+    overflow: scroll;
+    padding: 0 0 16px;
+}
+
 .buttons ul {
     display: flex;
     width: 100vw;
-    overflow: scroll;
-    padding: 16px 0;
+    padding: 0 30px;
 }
 
 .buttons li {
@@ -14,7 +18,6 @@
     justify-content: center;
     text-align: center;
     border-radius: 30px;
-    /* min-width: 88px; */
     padding: 0 20px;
     /* padding: 10px 20px; */
 }
@@ -23,13 +26,13 @@
     margin-right: 12px;
 }
 
-.buttons li:focus,
+/* .buttons li:focus,
 .buttons li:hover {
     background: linear-gradient(94.94deg, #FC9D83 -0.59%, #FFCE00 107.84%);
-}
+} */
 
 .buttons a {
-    font-family: Gilroy;
+    font-family: Gilroy, sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 15px;
@@ -42,7 +45,7 @@
     flex: none;
     order: 0;
     align-self: center;
-    margin: 10px 0px;
+    padding: 10px 0px;
 }
 
 .subMenu ul {
@@ -79,7 +82,7 @@
 }
 
 .subMenu a {
-    font-family: Gilroy;
+    font-family: Gilroy, sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 21px;
