--- a/src/components/menu/Menu.module.css
+++ b/src/components/menu/Menu.module.css
@@ -4,8 +4,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    
     text-align: center;
+    border-bottom: 1px solid oldlace;
   }
   
   .container a {
